<resources>
    <string name="app_name">GithubUsers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_about">About Me</string>
    <string name="title_notifications">Notifications</string>
    <string name="input_username">Search</string>
    <string name="username_row">Username</string>
    <string name="user_id">Id : %s</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="repository">Repository : %s</string>
    <string name="company">Company : %s</string>
    <string name="location">Location : %s</string>
    <string name="followers">Followers : %s</string>
    <string name="following">Following : %s</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="isbookmarked">IsBookmarked?</string>
    <string name="userspicture">UsersPicture</string>
    <string name="favorite">Mark your favorite user first!</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="favorite_title">Favorite User</string>
</resources>